aspect of Ice.

Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.4.2
======================================================================

General Changes
===============

- Fixed IceStorm bug which could cause a crash when using the Freeze
  database backend and multiple threads were trying to write to the
  database.

- Fixed minor performance issue with bi-directional proxies.

- Added support for replica and node name verification when securing
  the IceGrid node and registries. The names are matched against the
  certificate common name. The connection is rejected if the
  certificate CN doesn't match the replica or node name. The
  properties IceGrid.Registry.RequireNodeCertCN and
  IceGrid.Registry.RequireReplicaCertCN must be set to 1 to enable
  this verification.

- Fixed IceGrid bug where the server deactivation timeout would be
  ignored if the server was not deactivated using the IceGrid
  administrative facility.

- Fixed IceSSL bug in all language mappings that could cause a server
  to crash if a failure occurred during connection establishment and
  network tracing was enabled.


C++ Changes
===========

- Added support for clang compiler on Mac OS X.


Visual Studio Add-in Changes
============================

- Fixed a bug that affects Visual Studio C++ projects that build 
  static libraries.


C# Changes
==========

- Minor marshalling/un-marhsalling performance improvement (removed
  virtual specifier from streaming class).

- Added missing throwLocalException method to Ice.AsyncResult
  interface.


======================================================================
Changes since version 3.4.1
======================================================================


General Changes
===============
