@@ -17,48 +17,56 @@ final class X509KeyManagerI extends javax.net.ssl.X509ExtendedKeyManager
         _alias = alias;
     }
 
+    @Override
     public String
     chooseClientAlias(String[] keyType, java.security.Principal[] issuers, java.net.Socket socket)
     {
         return _alias;
     }
 
+    @Override
     public String
     chooseEngineClientAlias(String[] keyType, java.security.Principal[] issuers, javax.net.ssl.SSLEngine engine)
     {
         return _alias;
     }
 
+    @Override
     public String
     chooseServerAlias(String keyType, java.security.Principal[] issuers, java.net.Socket socket)
     {
         return _alias;
     }
 
+    @Override
     public String
-    chooseEngineServerAlias(String[] keyType, java.security.Principal[] issuers, javax.net.ssl.SSLEngine engine)
+    chooseEngineServerAlias(String keyType, java.security.Principal[] issuers, javax.net.ssl.SSLEngine engine)
     {
         return _alias;
     }
 
+    @Override
     public java.security.cert.X509Certificate[]
     getCertificateChain(String alias)
     {
         return _delegate.getCertificateChain(alias); 
     }
 
+    @Override
     public String[]
     getClientAliases(String keyType, java.security.Principal[] issuers)
     {
         return _delegate.getClientAliases(keyType, issuers);
     }
 
+    @Override
     public String[]
     getServerAliases(String keyType, java.security.Principal[] issuers)
     {
         return _delegate.getServerAliases(keyType, issuers);
     }
 
+    @Override
     public java.security.PrivateKey
     getPrivateKey(String alias)
     {
