@@ -23,6 +23,7 @@ subdirectory of each language mapping (e.g., cpp/CHANGES).
 Changes since version 3.4.2
 ======================================================================
 
+
 General Changes
 ===============
 
@@ -70,6 +71,13 @@ C# Changes
 
 - Added missing throwLocalException method to Ice.AsyncResult
   interface.
+
+
+Java Changes
+============
+
+- Fixed an IceSSL bug in which the IceSSL.Alias property was not
+  working correctly.
 
 
 ======================================================================
